--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 
 {
   "name": "react-native-gvr",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A bridge of react-native with google vr",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [
     "react-native",
     "video-360",
-    "video-vr"
+    "video-vr",
+    "360",
+    "gvrsdk"
   ],
   "author": "",
   "license": "",
   "peerDependencies": {
     "react-native": "^0.41.2",
     "react-native-windows": "0.41.0-rc.1"
-
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/duyluonglc/react-native-gvr"
   }
 }
